--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,27 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.0.2' //프로젝트에 사용할 스프링 부트 플러그인
-    id 'io.spring.dependency-management' version '1.1.0' //스프링의 의존성을 자동으로 관리해주는
+    id 'org.springframework.boot' version '3.0.2'
+    id 'io.spring.dependency-management' version '1.1.0'
 }
 
-group = 'org.example'
-version = '1.0-SNAPSHOT'
-sourceCompatibility = '17' // 자바 소스를 컴파일 할 때 사용할 자바버전
+group 'org.example'
+version '1.0'
+sourceCompatibility = '17'
 
 repositories {
-    mavenCentral() //의존성을 받을 저장소 지정
+    mavenCentral()
 }
 
-//개발하는데 필요한 기능의 의존성 입력 필요
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web' //웹 관련기능
-    testImplementation 'org.springframework.boot:spring-boot-starter-test' //테스트 관련기능
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    runtimeOnly 'com.h2database:h2'
+
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 test {
